--- a/Views/login.html
+++ b/Views/login.html
@@ -14,7 +14,7 @@
    
     <div class="mb-3 regBtnLine">
         <label>Még nincs fiókod? <a href="#!/register">Regisztráció</a></label>
-        <button class="btn btn-primary mb-3" ng-controller="userCtrl" ng-click="login()" >Bejelentkezés</button>
+        <button class="btn btn-primary mb-3" onclick="login()" >Bejelentkezés</button>
     </div>
 </div>
 </main>
