--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -109,3 +109,44 @@ footer{
     margin: 10px 0px;
     box-shadow: rgb(100, 100, 100) 5px 5px 10px;
 }
+
+
+ .hero {
+        position: relative;
+        background-image:
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url(
+'/Assets/img/hero.jpg');
+        background-size: cover;
+        background-position: center;
+        height: 45vh; 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        text-align: center;
+      }
+  
+
+      
+.hero .content {
+        position: absolute;
+         
+      }
+
+     
+  
+  
+.hero h1 {
+        font-size: 4rem;
+        font-weight: bold;
+      }
+  
+.hero p {
+        font-size: 1.5rem;
+        margin-bottom: 20px;
+      }
+  
+.hero .btn {
+        font-size: 1.25rem;
+      }
