--- a/Views/login.html
+++ b/Views/login.html
@@ -1,5 +1,57 @@
+
+<style>
+    body {
+        background-image:
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.849)),
+        url('/Assets/img/background.jpg');
+        background-size: cover;
+        background-position: center;
+        height: 100vh; 
+       
+    }
+
+    .form-container{
+        margin: auto;
+        width: 40% !important;
+    }
+
+    .form-container {
+        margin: auto;
+        width: 40% !important;
+    }
+
+    .btn-primary {
+        width: 35%;
+        height: 50%;
+        margin-left: auto;
+        
+        font-size: 4vw; /* A gomb szöveg mérete a nézet szélességéhez igazodik */
+    }
+
+    /* Mobil eszközökhöz vagy kisebb képernyőkhöz médiakérdés */
+    @media (max-width: 768px) {
+        .form-container {
+            width: 80% !important; /* Form szélesség mobilhoz igazítva */
+        }
+
+        .btn-primary {
+            width: 50%;  /* Gomb szélessége mobilon */
+            font-size: 5vw; /* Kisebb képernyőn nagyobb szövegméret */
+        }
+    }
+
+    /* Nagyobb képernyőkhöz médiakérdés */
+    @media (min-width: 1200px) {
+        .btn-primary {
+            font-size: 2vw; /* Nagy képernyőn kisebb szövegméret */
+        }
+    }
+
+  
+</style>
+
 <div class="form-container">
-    <h1>Bejelentkezés</h1>
+    <h1 style="margin-left: auto; margin-right: auto; margin-bottom: 5%;">Bejelentkezés</h1>
     <div class="alert alert-danger d-none" role="alert" id="alertBox">
         <!-- alertmessages shows here -->
     </div>
@@ -13,6 +65,6 @@
     </div>
    
 
-    <button class="btn btn-primary mb-3" onclick="login()">Bejelentkezés</button>
+    <button class="btn btn-primary mb-3" style="width: 35%; height: 50%; font-size: 120%; margin-left: auto;" onclick="login()">Bejelentkezés</button>
 </div>
 </main>
