--- a/Views/breakfast.html
+++ b/Views/breakfast.html
@@ -5,3 +5,10 @@
         <a href="#" class="btn btn-primary btn-lg">Tovább!</a>
     </div>
 </section>
+
+  <div class="cards">
+    <br>
+      
+    
+      
+    </div>
