--- a/Views/profile.html
+++ b/Views/profile.html
@@ -10,8 +10,13 @@
         <label for="email">E-mail address</label>
     </div>
     <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="phone" placeholder="Phone">
+        <label for="phone">Phone</label>
+    </div>
+    <div class="form-floating mb-3">
         <input type="text" class="form-control" id="role" placeholder="Role" disabled>
         <label for="role">Role</label>
     </div>
+    
     <button class="btn btn-warning mb-3" onclick="updateProfile()">Update</button>
 </div>
