--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -21,6 +21,7 @@ body{
     box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.1), inset 4px -1px 4px rgba(0, 0, 0, 0.1); /* Belső árnyék */
     filter: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
     width: 100%;
+    z-index: 999;
 }
 
 main {
