--- a/Views/appetizer.html
+++ b/Views/appetizer.html
@@ -1,6 +1,6 @@
 <section class="hero show">
     <div class="container herotext">
-        <h1>Konrád’s Gatorade</h1>
+        <h1>Előételek</h1>
         <p>Drink it and be awesome, mert a boring nem opció!</p>
         <a href="#" class="btn btn-primary btn-lg">Tovább!</a>
     </div>
