User oldal + user update elkészítése

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -11,7 +11,6 @@ html, body {
 }
 body{
     background-color: rgb(255, 255, 255);
-    
     color: rgb(0, 0, 0);
   
 }
@@ -286,4 +285,6 @@ footer {
         cursor: pointer;
       }
 
-      
+h1{
+    color: white;
+}
